--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">DaggerHiltSample</string>
+    <!-- Preference Titles -->
+    <string name="search_header">Search options</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="search_max_title">Max results</string>
+    <string name="order_by_title">Items order</string>
+    <string name="menu_settings_title">Settings</string>
 </resources>
